--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ CI_ENVIRONMENT = development
 # APP
 #--------------------------------------------------------------------
 
-app.baseURL = 'https://pici4-revisi.herokuapp.com/'
+app.baseURL = 'https://haafidzci4.herokuapp.com/'
 # app.forceGlobalSecureRequests = false
 
 # app.sessionDriver = 'CodeIgniter\Session\Handlers\FileHandler'
@@ -51,10 +51,10 @@ app.baseURL = 'https://pici4-revisi.herokuapp.com/'
 # DATABASE
 #--------------------------------------------------------------------
 
-database.default.hostname = us-cdbr-east-04.cleardb.com
-database.default.database = heroku_5a25b90f505369c
-database.default.username = b86a92164345a0
-database.default.password = dd71438e
+database.default.hostname = us-cdbr-east-05.cleardb.net
+database.default.database = heroku_435b95530c9f5b1
+database.default.username = b570b11c912a19
+database.default.password = 0e499eb8
 database.default.DBDriver = MySQLi
 
 # database.tests.hostname = localhost
